[package]
name = "chronokitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["derive", "env"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0"


[dev-dependencies]
cucumber = "0.19.1"

[[test]]
name = "chronokitty"
harness = false
