[package]
name = "chronokitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.10", features = ["derive", "env"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
cucumber = "0.19.1"

[[test]]
name = "chronokitty"
harness = false
